gdaypunchwebapp/gdaypunchreact/src/App.scss
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.App {
  text-align: center;

  p {
    z-index: 1;
  }
}

nav {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  position: absolute;
  top: 30pt;
  right: 30pt;

  a {
    text-decoration: none;
    color: #cecece;
    font-size: 1em;
    text-transform: uppercase;
    letter-spacing: 2pt;
  }
}

.App-header-container .home-logo {
  display: flex;
  align-items: center;
  height: 100px;
  margin-top: 50pt;
}

.App-logo {
  height: 30vmin;
  pointer-events: none;
  margin-left: -87px;
}

.App-logo-big {
  height: 16vmin;
  pointer-events: none;
  z-index: 1;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear,
      App-logo-pulsate infinite 1s alternate;
  }
}

.app-temp-background {
  background-image: url("/static/images/launch-background.png");
  background-position: center;
  background-size: contain;
}

.header {
  align-items: center;
  width: 100%;
  display: flex;
  flex-direction: column;
  position: absolute;
  animation: 0.6s ease-in 0s 1 slideInFromLeft;
}

.App-header-container, .pdf-container {
  background-color: #f1f1f1;
  min-height: 75vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(5px + 2vmin);
  color: rgb(179, 179, 179);

  .react-pdf__Document,
  .react-pdf__Page,
  .react-pdf__Page__textContent {
    width: 100% !important;

    .react-pdf__Page__canvas {
      height: 100% !important;
      width: 100% !important;
    }
  }
}

.registration {
  width: 20em;
  font-size: 1em;
  text-transform: uppercase;
  letter-spacing: 1pt;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-end;
  min-height: 9em;

  .registration-inputs {
    min-width: 20em;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 5em;
  }

  .input-group {
    display: flex;
    align-items: center;
    justify-content: space-between;

    input {
      width: 18em;
      height: 3em;
      border-radius: 5px;
    }
  }

  .sign-up-button {
    width: 12em;
    min-height: 2em;
    border-radius: 5px;
    font-size: 0.9em;
    text-transform: uppercase;
    color: #ffffff;
    letter-spacing: 2pt;
    background: #e0811f;
    border: none;
  }
}

.registration {
  visibility: hidden;
  animation: 0.5s ease-in 0s 1 slideOutToRight;
}

.exit {
  animation: 0.6s ease-in 0s 1 slideOutToLeft;
  transform: translateX(-100%);
}

.show {
  display: flex;
  visibility: visible;
  animation: 0.5s ease-in 0s 1 slideInFromRight;
  transform: translateX(0%);
}

@keyframes slideInFromLeft {
  0% {
    opacity: 0;
    transform: translateX(-100%);
  }
  90% {
    opacity: 0.2;
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideOutToLeft {
  0% {
    opacity: 1;
    transform: translateX(0);
  }
  30% {
    opacity: 0.3;
  }
  100% {
    opacity: 0;
    transform: translateX(-100%);
  }
}

@keyframes slideInFromRight {
  0% {
    opacity: 0;
    transform: translateX(100%);
  }
  90% {
    opacity: 0.2;
  }
  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideOutToRight {
  0% {
    opacity: 1;
    transform: translateX(0);
  }
  50% {
    opacity: 0.3;
  }
  100% {
    opacity: 0;
    transform: translateX(100%);
  }
}

.pdf-reader {
  font-style: italic;
  color: #272727;
}

.pdf-button {
  position: absolute;
  z-index: 1;
  height: 4em;
  width: 4em;

  &:hover {
    opacity: 1 !important;
    cursor: pointer;
  }
}

.pdf-details {
  display: flex;
  flex-direction: row;
  text-align: start;
  margin-left: auto;
  margin-right: auto;
  width: max-content;
  margin-top: 10pt;
  margin-bottom: 10pt;
  align-items: flex-end;

  svg {
    margin-left: 20pt;
    height: 1em;

    &:hover {
      cursor: pointer;
      width: 1.3em;
      height: 1.3em;
    }
  }

  h2,
  h4 {
    margin: unset;
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes App-logo-pulsate {
  from {
    filter: brightness(0.3);
  }
  to {
    filter: brightness(0.8);
  }
}

.feature-content {
  display: flex;
  width: 80%;
  justify-content: space-evenly;
  margin-top: 30pt;

  h2 {
    font-size: 1em;
  }

  .svg-inline--fa {
    height: 2em;
    width: 4em;
  }
}

